tests/ui/foreign_let.stderr
Error [E0009]: Lex does not use `let`
  --> tests/ui/foreign_let.lex:2:5
    |
  2 |     let count = 1;
    |     ^^^
 Why: a binding is `val` if it never changes, or `var` if it can
 Fix: replace `let` with `val`
